# libdatastruct

./: README.md  common  install  update-source
gnulib/: configure  configure.ac
gnulib/gllib/: Makefile.am
gnulib/glm4/: Makefile.am
gnulib/gltests/: Makefile.am  configure  configure.ac
include/: gl_list.h  gl_oset.h  gl_xlist.h  gl_xoset.h  gl_xsublist.h  list.h  xalloc.h  xsublist.h
