## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += error.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += fdopen.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inttypes-pri.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += longlong.m4
EXTRA_DIST += msvc-inval.m4
EXTRA_DIST += msvc-nothrow.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += onceonly.m4
EXTRA_DIST += size_max.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += stdalign.m4
EXTRA_DIST += stdbool.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdio_h.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += strerror.m4
EXTRA_DIST += string_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += xalloc.m4
EXTRA_DIST += xsize.m4
